--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-extends layouts/layout-page1.jade
+extends layouts/layout-home.jade
 block content
     main.contenido_p_inicio
         section.llamada_accion_1
