--- a/views/portafolio.jade
+++ b/views/portafolio.jade
@@ -1,4 +1,9 @@
-extends layouts/layout-page1.jade
+extends layouts/layout-page-wa.jade
+block metatag
+        meta(name='description', content='Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.')
+        meta(name='keywords', content='DUDUDU, desarrollo web, diseño web, sitio web')
+        meta(name='author', content='DUDUDU')
+        meta(name='copyright', content='DUDUDU')
 block content
     main.contenido_p_portafolio
         //- Trabajos Realizados
