--- a/views/quienes-somos.jade
+++ b/views/quienes-somos.jade
@@ -1,4 +1,10 @@
-extends layouts/layout-page1.jade
+extends layouts/layout-page-wa.jade
+//- Corregir los metatag en la paginas menos index y fijarse en los layouts en menu.
+block metatag
+        meta(name='description', content='Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.')
+        meta(name='keywords', content='DUDUDU, desarrollo web, diseño web, sitio web')
+        meta(name='author', content='DUDUDU')
+        meta(name='copyright', content='DUDUDU')
 block content
     main.contenido_p_quienes_somos
         //- Misión, vision y valores
