metatag, correccion, inicio automatización  menu

--- a/views/blog.jade
+++ b/views/blog.jade
@@ -1,7 +1,7 @@
 extends layouts/layout-page-no-wa.jade
 block metatag
-        meta(name='description', content='Somos una empresa que ayuda a conectar empresas, instituciones y personas con el mundo digital, para que logren sus objetivos.')
-        meta(name='keywords', content='DUDUDU, MISIÓN, VISIÓN')
+        meta(name='description', content='Mayormente subiremos ejemplos y consejos prácticos para proyectos en la web.')
+        meta(name='keywords', content='Blog, Web')
         meta(name='author', content='DUDUDU')
         meta(name='copyright', content='DUDUDU')
 block content
