--- a/views/layouts/layout-home.jade
+++ b/views/layouts/layout-home.jade
@@ -43,6 +43,7 @@ html(lang="es")
             a.appendChild(r);
             })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
         title= title
+        //-Meta-tags
         meta(name='description', content='Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.')
         meta(name='keywords', content='DUDUDU, desarrollo web, diseño web, sitio web')
         meta(name='author', content='DUDUDU')
@@ -61,8 +62,6 @@ html(lang="es")
                         a(href="#") SERVICIOS
                     .portafolio_m
                         a(href="#") PORTAFOLIO
-                    .demos_m
-                        a(href="#") DEMOS
                     .blog_m
                         a(href="#") BLOG
             abbr(title='Hola, en que te podemos ayudar :)')
