--- a/views/portafolio.jade
+++ b/views/portafolio.jade
@@ -1,7 +1,7 @@
 extends layouts/layout-page-wa.jade
 block metatag
-        meta(name='description', content='Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.')
-        meta(name='keywords', content='DUDUDU, desarrollo web, diseño web, sitio web')
+        meta(name='description', content='Estos son nuestros trabajos que hicimos y se siguen actualizando para que el sitio web tenga vida.')
+        meta(name='keywords', content='Portafolio, Web')
         meta(name='author', content='DUDUDU')
         meta(name='copyright', content='DUDUDU')
 block content
