--- a/views/quienes-somos.jade
+++ b/views/quienes-somos.jade
@@ -1,8 +1,7 @@
 extends layouts/layout-page-wa.jade
-//- Corregir los metatag en la paginas menos index y fijarse en los layouts en menu.
 block metatag
-        meta(name='description', content='Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.')
-        meta(name='keywords', content='DUDUDU, desarrollo web, diseño web, sitio web')
+        meta(name='description', content='Somos una empresa que ayuda a conectar empresas, instituciones y personas con el mundo digital, para que logren sus objetivos.')
+        meta(name='keywords', content='DUDUDU, MISIÓN, VISIÓN')
         meta(name='author', content='DUDUDU')
         meta(name='copyright', content='DUDUDU')
 block content
