--- a/views/servicios.jade
+++ b/views/servicios.jade
@@ -1,7 +1,7 @@
 extends layouts/layout-page-wa.jade
 block metatag
-        meta(name='description', content='Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.')
-        meta(name='keywords', content='DUDUDU, desarrollo web, diseño web, sitio web')
+        meta(name='description', content='Quiero empezar en el mundo web. Hay demasiadas opciones y no se cual es la mejor para el proyecto.')
+        meta(name='keywords', content='Servicios, Web')
         meta(name='author', content='DUDUDU')
         meta(name='copyright', content='DUDUDU')
 block content
