--- a/views/layouts/layout-home.jade
+++ b/views/layouts/layout-home.jade
@@ -57,13 +57,13 @@ html(lang="es")
                         img(src="/assets/brand/Logo_DUDUDU_blanco.webp")
                 .pag_sec_m
                     .quienes_somos_m
-                        a(href="#") QUIENES SOMOS
+                        a(href="/quienes-somos") QUIENES SOMOS
                     .servicios_m
-                        a(href="#") SERVICIOS
+                        a(href="/servicios") SERVICIOS
                     .portafolio_m
-                        a(href="#") PORTAFOLIO
+                        a(href="/portafolio") PORTAFOLIO
                     .blog_m
-                        a(href="#") BLOG
+                        a(href="/blog") BLOG
             abbr(title='Hola, en que te podemos ayudar :)')
                 a.link_flotante_wp(href='https://api.whatsapp.com/send?phone=940826034&text=Hola,%20vengo%20de%20su%20sitio%20web.', target='_blank', rel='noopener noreferrer')
                     i.fa-brands.fa-whatsapp.fa-3x
