--- a/views/layouts/layout-page-no-wa.jade
+++ b/views/layouts/layout-page-no-wa.jade
@@ -37,14 +37,14 @@ html(lang="es")
                     a(href='/')
                         img(src='/assets/brand/Logo_DUDUDU_blanco.webp', alt='Logo DUDUDU')
                 .pag_sec_me
-                    .quienes_somos_me_a
-                        a(href='about-us') QUIENES SOMOS
+                    .quienes_somos_me
+                        a(href='/quienes-somos') QUIENES SOMOS
                     .servicios_me
-                        a(href='services') SERVICIOS
+                        a(href='/servicios') SERVICIOS
                     .portafolio_me
-                        a(href='portafolio') PORTAFOLIO
-                    .blog_me
-                        a(href='blog/') BLOG
+                        a(href='/portafolio') PORTAFOLIO
+                    .blog_me#blog_me
+                        a(href='/blog') BLOG
         block content
         //- Pie de pagina 
         footer 
@@ -77,5 +77,12 @@ html(lang="es")
                 a(href="#") Política de privacidad
             br
             p © 2022 Todos los derechos reservados| DUDUDU 
+        //- Menu, página actual
+        script.
+                const blogMe = document.getElementById("blog_me");
+
+                if (document.title == 'BLOG') {
+                    blogMe.classList.add("blog_me_a");
+                }
 
 
