--- a/views/layouts/layout-post.jade
+++ b/views/layouts/layout-post.jade
@@ -37,14 +37,14 @@ html(lang="es")
                     a(href='/')
                         img(src='/assets/brand/Logo_DUDUDU_blanco.webp', alt='Logo DUDUDU')
                 .pag_sec_me
-                    .quienes_somos_me_a
-                        a(href='about-us') QUIENES SOMOS
+                    .quienes_somos_me
+                        a(href='/quienes-somos') QUIENES SOMOS
                     .servicios_me
-                        a(href='services') SERVICIOS
+                        a(href='/servicios') SERVICIOS
                     .portafolio_me
-                        a(href='portafolio') PORTAFOLIO
-                    .blog_me
-                        a(href='blog/') BLOG
+                        a(href='/portafolio') PORTAFOLIO
+                    .blog_me_a
+                        a(href='/blog') BLOG
         block content
         //- Pie de pagina 
         footer 
