En-rutado sub carpeta blog con index y 1er post

--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -1,4 +1,4 @@
-extends layouts/layout-page-no-wa.jade
+extends ../layouts/layout-page-no-wa.jade
 block metatag
         meta(name='description', content='Mayormente subiremos ejemplos y consejos prácticos para proyectos en la web.')
         meta(name='keywords', content='Blog, Web')
