--- a/views/layouts/layout-page-no-wa.jade
+++ b/views/layouts/layout-page-no-wa.jade
@@ -44,7 +44,7 @@ html(lang="es")
                     .portafolio_me
                         a(href='/portafolio') PORTAFOLIO
                     .blog_me#blog_me
-                        a(href='/blog') BLOG
+                        a(href='/blog/') BLOG
         block content
         //- Pie de pagina 
         footer 
