--- a/views/layouts/layout-post.jade
+++ b/views/layouts/layout-post.jade
@@ -27,6 +27,7 @@ html(lang="es")
             r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
             a.appendChild(r);
             })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+        block richSnippets
         title= title
         block metatag
     body.quienes_somos
