avance 1 del 1er artículo

--- a/views/blog/lo-primero-que-necesitas-para-tener-un-sitio-web.jade
+++ b/views/blog/lo-primero-que-necesitas-para-tener-un-sitio-web.jade
@@ -42,6 +42,28 @@ block content
                                         a(href='lo-primero-que-necesitas-para-tener-un-sitio-web#opc-cms') 2.2.3. La opción de instalar un CMS.
             h2#lo-primero 1. Lo primero
             p Lo primero es saber para que lo quieres, sería mejor si se completa un briefing (es una serie de preguntas sobre la empresa) para el sitio web, y sería mucho mejor si se tiene un plan de marketing. Según a eso se va hacer el diseño y casi todo lo que falta.
+            picture
+                source(media='(max-width: 576px)', srcset='/assets/images/articulos/lo-primero-que-necesitas-para-tener-un-sitio-web/briefing_cel.webp')
+                source(media='(min-width: 577px)', srcset='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/briefing.webp')
+                img(src='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/briefing.webp', alt='Briefing')
+            p.titulo_imagen_articulo_ae Briefing
+            h2#lo-segundo 2. Lo segundo
+            p Lo segundo se dividiría en 2 casos:
+            h3#cms-principalmente 2.1. Para CMS principalmente.
+            p Si quieren funcionalidades simples y que ya existen, como las de una página de presentación (inicio), un blog o un portafolio, hasta un e-commerce.
+            picture
+                source(media='(max-width: 576px)', srcset='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/cms_ejemplos_cel.webp')
+                source(media='(min-width: 577px)', srcset='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/cms_ejemplos.webp')
+                img(src='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/cms_ejemplos.webp', alt='Ejemplos de CMS')
+            p.titulo_imagen_articulo_ae Ejemplos de CMS
+            p Citando a Wikipedia: "Un sistema de gestión de contenidos o CMS es un programa informático que permite crear un entorno de trabajo para la creación y administración de contenidos, principalmente en páginas web, por parte de los administradores, editores, participantes y demás usuarios." es decir, ofrece la opción de que personas que no son técnicas puedan administras el contenido.
+            p Lo mejor en este caso es buscar primero un hosting, porque la mayoría de las empresas que ofrecen un servicio de hosting tienen incorporado herramientas, para que puedas hacer tu sitio web relativamente rápido y más o menos fácil.
+            picture
+                source(media='(max-width: 576px)', srcset='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/empresas_hosting_cel.webp')
+                source(media='(min-width: 577px)', srcset='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/empresas_hosting.webp')
+                img(src='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/empresas_hosting.webp', alt='Empresas con servicios de hosting')
+            p.titulo_imagen_articulo_ae Ejemplos de empresas con servicio de hosting.
+            p Lo que no siempre pero usualmente te ofrecen, dependiendo de la empresa que da el servicio, es:
             
         
     
