--- a/views/blog/index.jade
+++ b/views/blog/index.jade
@@ -8,7 +8,7 @@ block content
     main.contenido_p_blog
         //- Sección de artículos
         section.seccion_articulos_b
-            h1 NUESTROS ARTICULOS
+            h1 NUESTROS ARTÍCULOS
             p.descripcion_nuestros_articulos_b Mayormente subiremos ejemplos y consejos prácticos para proyectos en la web.
             .seccion_articulos_contenedor_b
                 article.articulo_1
@@ -18,7 +18,7 @@ block content
                             source(media='(min-width: 577px)', srcset='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/portada_1ro_mecesitas_sitio_web.webp')
                             img(src='/assets/images/blog/lo-primero-que-necesitas-para-tener-un-sitio-web/portada_1ro_mecesitas_sitio_web.webp', alt='sitio web escritorio')
                     a(href='#')
-                        h2 Lo primero que necesitas para tener un sitio web
+                        h2= post[0].titulo
                     p Con el acceso al internet se puede escuchar muchos términos y conceptos, pero puede ser confuso darle un contexto a todo ello, en este articulo te daré mi opinión para tener un sitio web.
                     p
                         span Fecha: 31/05/2022
