--- a/views/quienes-somos.jade
+++ b/views/quienes-somos.jade
@@ -30,7 +30,7 @@ block content
         //- Llamada a la acción
         section.servicios_quienes_somos
             h2 ¿Quieres ver nuestros servicios?
-            p Así es como puedo ayudarte a hacer tus proyectos en la web.
+            p Así es como podemos ayudarte a hacer tus proyectos en la web.
             form(action='#')
                 button(type='submit') Me interesan sus servicios.
 
