--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layouts/layout-home.jade
 block content
     main.contenido_p_inicio
+        //- poner los links con las rutas que corresponden.
+        //- crear un layout general de donde dependan las otras.
         section.llamada_accion_1
             h1 DISEÑO Y DESARROLLO WEB PARA EMPRESA, MYPE, INSTITUCIÓN Y MARCA PERSONAL
             p Le ayudamos a crear un sitio web con un estilo propio para destacar en el mercado y cumplir con los objetivos que necesita alcanzar.
