--- a/views/layouts/layout-post.jade
+++ b/views/layouts/layout-post.jade
@@ -30,7 +30,7 @@ html(lang="es")
         block richSnippets
         title= title
         block metatag
-    body.quienes_somos
+    body.aticulo_estandar
         //- La cabecera de las paginas secundarias
         header.cabecera_estandar
             nav.menu_estandar
