--- a/views/error.jade
+++ b/views/error.jade
@@ -1,5 +1,8 @@
-extends layout
-
+extends layouts/layout-page-no-wa.jade
+block metatag
+    meta(name="robots", content="noindex")
+    meta(name='author', content='DUDUDU')
+    meta(name='copyright', content='DUDUDU')
 block content
   h1= message
   h2= error.status
