--- a/views/layouts/layout-page-no-wa.jade
+++ b/views/layouts/layout-page-no-wa.jade
@@ -29,7 +29,7 @@ html(lang="es")
             })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
         title= title
         block metatag
-    body.quienes_somos
+    body.blog
         //- La cabecera de las paginas secundarias
         header.cabecera_estandar
             nav.menu_estandar
